# Engram

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  run.sh
accounts/: urls.py
catalog/: admin.py  markdown.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_lesson_deep_dive_md.py
catalog/templatetags/: content_extras.py
config/: settings.py  urls.py
content/: roadmap.yaml
content/cicd/: 01-pipeline-model.yaml  02-github-actions-basics.yaml  03-stages-cache-artifacts.yaml  04-build-and-push-image.yaml  05-deploy-secrets-environments.yaml  course.yaml
content/docker/: 01-containers-and-images.yaml  02-running-containers.yaml  03-building-images.yaml  04-volumes-and-data.yaml  05-networking-and-compose.yaml  06-registries-and-best-practices.yaml  course.yaml
content/git/: 01-repos-staging-commits.yaml  02-branching-merging.yaml  03-remotes-collaboration.yaml  04-rebase-undo-recover.yaml  05-workflows.yaml  course.yaml
content/lpic-1/: 01-system-architecture.yaml  02-package-management.yaml  03-gnu-unix-commands.yaml  04-filesystem-permissions.yaml  05-devices-disks-filesystems.yaml  (+8 more)
exams/: admin.py  models.py  tests.py  urls.py  views.py
labs/: admin.py  models.py  urls.py  views.py
learning/: admin.py  context_processors.py  models.py  services.py  tests.py  urls.py  views.py
recall/: admin.py  models.py  services.py  sm2.py  tests.py  urls.py  views.py
roadmap/: admin.py  models.py  services.py  tests.py  urls.py  views.py
scripts/: backup  healthcheck  userinfo
static/: app.css
templates/: base.html
(+34 files in other folders)
