[project]
name = "platform"
version = "0.1.0"
description = "A platform to make devops roadmap easier"
authors = [
    {name = "Leily-Azizan"}
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0,<7.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "pygments (>=2.20.0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
